# social-causal-lang

./: .gitignore  README.md  main.tex  pyproject.toml
data/: prolific_demographic_belief.csv  prolific_demographic_physical.csv  prolific_demographic_preference.csv
data/belief_speaker/: trials.csv
data/physical_speaker/: trial_data.json  trials.csv
data/preference_speaker/: trials.csv  trials.json
docs/css/: jquery-ui-edit.css  jquery-ui-slider-pips-edit.css  jspsych.css  trials-demo.css
docs/js/: belief-grid-world-renderer.js  belief-trial-generator.js  consent.js  datapipe.js  demographic.js  grid-world-renderer.js  jquery-ui-slider-pips.js  physical-trial-definitions.js  physical-trial-generator.js  plugin-html-button-response.js  plugin-html-slider-response.js  plugin-instruction-demo.js  plugin-instructions.js  plugin-preload.js  plugin-survey-html-form.js  plugin-survey-multi-choice.js  preference-grid-world-renderer.js  preference-trial-definitions.js  preference-trial-generator.js
outputs/: model_predictions_full.csv  model_results.json  model_states.json  model_table.tex
src/: model.md  utils.py
src/analysis/: fit.py  generate_model_table.py  human.py  human_analysis.py  model_results.py  plot.py  plot_model_comparison.py  plot_paper_figures.py  plot_unique_dist.py  plotting_utils.py  run.py  run_ablation_experiments.py  run_speaker.py  speaker.py
src/model/: classifier.py  config.py  rsa.py  semantics.py
src/utils/: __init__.py  cache.py  data_loader.py  io.py  math_helpers.py  metrics.py  plotting.py  visualize.py
(+630 files in other folders)
