[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-causation"
version = "0.1.0"
description = "Social causation research project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20.0",
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0",
    "labviz",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
labviz = { path = "../labviz", editable = true }
